@@ -169,6 +169,10 @@ This update cannot be performed.<br>\
 You do not have permission to write to {0}.<br>\
 Please contact your system administrator for help.<br>\
 </html>
+Common.updates.downloadingBootstrap=downloading updater bootstrap...
+Common.updates.downloadingSimJar=downloading simulation JAR file...
+Common.updates.progressDialogTitle=Updating
+Common.updates.progressDialogMessage=Updating \"{0}\" to version {1}
 
 # Tracking feature
 Common.tracking.sendToPhET=Send tracking info to PhET
@@ -180,8 +184,6 @@ Common.tracking.about=\
 {0} is made possible by grants that require us to track anonymous usage statistics.<br>\
 No personal or private data is sent; you can see the full report sent to PhET below.<br><br>\
 Please visit the PhET website for more information: {1}
-
-Common.DownloadProgressDialog.downloading=downloading
 
 #For additional common packages
 chart-time-control.go=Go!
