@@ -36,8 +36,13 @@ public class AutomaticUpdateDialog extends AbstractUpdateDialog {
     protected JPanel createButtonPanel( final String project, final String sim, final String simName, final PhetVersion currentVersion, final PhetVersion newVersion, String locale ) {
         
         // does the update
-        JButton updateNowButton = new UpdateButton( project, sim,locale );
-
+        JButton updateButton = new UpdateButton( project, sim, locale, simName, newVersion );
+        updateButton.addActionListener( new ActionListener() {
+            public void actionPerformed( ActionEvent e ) {
+                dispose();
+            }
+        } );
+        
         // ignores this update until a later time
         JButton askMeLater = new JButton( ASK_ME_LATER_BUTTON );
         askMeLater.addActionListener( new ActionListener() {
@@ -60,7 +65,7 @@ public class AutomaticUpdateDialog extends AbstractUpdateDialog {
         
         // panel
         JPanel buttonPanel = new JPanel();
-        buttonPanel.add( updateNowButton );
+        buttonPanel.add( updateButton );
         buttonPanel.add( Box.createHorizontalStrut( 30 ) );
         buttonPanel.add( askMeLater );
         buttonPanel.add( skipThisVersion );
