@@ -1,8 +1,9 @@
-11-21-08: #926, add UpdateProgressDialog
+11-24-08: #926, integrated threaded downloading & progress bar into SimUpdater
+11-21-08: #926, add DownloadProgressDialog
 11-21-08: add MaxCharsLabel, a specialized JLabel that displays a max number of chars
 11-21-08: add SwingUtils.setPreferredWidth, setPreferredHeight
 11-21-08: add SwingUtils.centerDialog
-11-21-08: #926, add Downloader util class
+11-21-08: #926, add DownloadThread util class
 11-14-08: add StringUtil.stackTraceToString
 11-14-08: move contents of package phetcommon.util.testing into phetcommon.tests.util
 11-14-08: move dialogs that aren't part of a specific feature to new phetcommon.dialogs package
